refactor: separate module and add controller scope element

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
 <body ng-app="myApp">
   <test name="john" age="32"></test>
+  <div ng-controller="MainController as mainCtrl">
+    {{mainCtrl.text}}
+  </div>
 </body>
 
 </html>
